fix(orchestrator): grow the tuned heap, preserve other flags, refuse to lower
Three follow-ups fluck-boss flagged in re-review:

1. **Heap doesn't grow on repeat OOMs.** `maxOf(512MB, current heap)`
   pinned the heap at the configured value forever: a 1g plugin that OOMs
   twice came back on 1g both times, labelled "tuned" while doing nothing.
   The heap is now grown by 3/2 each restart, capped at 8g, with the 512m
   floor still applying to small configured heaps. Once the cap is hit, the
   restart leaves the args alone so the loop can't bounce off the ceiling.

2. **A missing or malformed heap arg cannot lower the heap.** When
   `-Xmx` was absent or unparseable, the previous code fell back to
   512m unconditionally. An explicitly configured 1g heap that survived a
   malformed report now stays at 1g (the args are returned unchanged);
   a 256m heap with no parseable flag also keeps its args, since we
   don't know what the user actually has.

3. **Other JVM flags are preserved in order.** The args now swap only
   the `-Xmx` entry (or append it if missing); `-Xss`, `-D...`, GC flags,
   `--add-opens`, anything else the user passed, all stay where they
   were.

New tests: a "grows on each OOM" mutation check that feeds the outcome
back through four restarts (1024 -> 1536 -> 2304 -> 3456 -> 5184), a
flag-preservation case with six interleaved flags, and a malformed-`-Xmx`
case that returns args unchanged.

The old `tunedHeapMb()` helper is replaced by `tunedJvmArgs()`; the
strategy executor now calls it once and threads the result through.

No Co-Authored-By line. Spaced hyphens throughout.